--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -1,9 +1,9 @@
-name: Upload Website to S3 bucket
+name: Upload Web Crawler files to S3 bucket
 
 on:
   push:
     branches:
-    - main
+    - master
 
 jobs:
   deploy:
