--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -22,4 +22,7 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
-        aws s3 sync . s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        aws s3 sync . s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete \
+                      --exclude ".venv/*"
+                      --exclude ".git/*"
+                      --exclude ".github/*"
