--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Run Ansible Playbook
       uses: arillso/action.playbook@master
       with:
-        playbook: crawler.yml
+        playbook: ./ansible/crawler.yml
 
   deploy:
     runs-on: ubuntu-latest
