--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -18,7 +18,7 @@ jobs:
       uses: dawidd6/action-ansible-playbook@v2
       with:
         playbook: crawler.yml
-        directory: ./ansible/
+        directory: ../
         inventory: |
           [all]
 
