--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -18,9 +18,8 @@ jobs:
       uses: dawidd6/action-ansible-playbook@v2
       with:
         playbook: crawler.yml
-        directory: ../
-        inventory: |
-          [all]
+        directory: ../../
+        inventory: [all]
 
   deploy:
     runs-on: ubuntu-latest
@@ -39,4 +38,4 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
-        aws s3 sync ./ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        aws s3 sync ../../ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
