--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -18,6 +18,7 @@ jobs:
       uses: dawidd6/action-ansible-playbook@v2
       with:
         playbook: crawler.yml
+        directory: ./
         inventory: |
           [all]
 
