--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -15,10 +15,9 @@ jobs:
       uses: actions/checkout@v1
     
     - name: Run playbook
-      uses: dawidd6/action-ansible-playbook@v2
+      uses: arillso/action.playbook@master
       with:
         playbook: crawler.yml
-        directory: .
         inventory: |
           [all]
 
