--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Run playbook
       uses: arillso/action.playbook@master
       with:
-        playbook: crawler.yml
+        playbook: ../crawler.yml
         inventory: |
           [all]
 
@@ -38,4 +38,4 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
-        aws s3 sync ../../ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        aws s3 sync ../ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
