--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -7,26 +7,19 @@ on:
 
 jobs:
 
-  run-playbook:
+  run-playbook-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-    
+
     - name: Run playbook
       uses: arillso/action.playbook@master
       with:
-        playbook: ../crawler.yml
+        playbook: ../../crawler.yml
         inventory: |
           [all]
-
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -38,4 +31,4 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
-        aws s3 sync ../ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        aws s3 sync ../../ansible/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
