--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run playbook
-      uses: arillso/action.playbook@master
+      uses: dawidd6/action-ansible-playbook@v2
       with:
         playbook: ../../crawler.yml
         inventory: |
