--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -15,11 +15,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run playbook
-      uses: dawidd6/action-ansible-playbook@v2
-      with:
-        playbook: ../../crawler.yml
-        inventory: |
-          [all]
+      run: ansible-playbook --verbose ansible/crawler.yml
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
