--- a/.github/workflows/test_events.yml
+++ b/.github/workflows/test_events.yml
@@ -1,4 +1,4 @@
-name: Create S3 bucket and Upload the crawled web files to it
+name: Create S3 bucket and Upload the web files to it
 
 on:
   push:
