--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -5,13 +5,13 @@
   tasks:
 
   - name: Run script to crawl the website
-    shell: wget --mirror -o logfile.txt -p -P . https://adappt.co.uk/
+    shell: wget --mirror -o logfile.txt -p -P data/ https://adappt.co.uk/
     args:
       warn: false
 
   - name: zip the saved folder
     archive:
       path:
-        - adappt.co.uk
-      dest: adappt_co_uk.zip
+        - data/adappt.co.uk
+      dest: data/adappt_co_uk.zip
       format: zip
