--- a/.github/workflows/test_event.yml
+++ b/.github/workflows/test_event.yml
@@ -15,10 +15,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run playbook
-      uses: dawidd6/action-ansible-playbook@v2
-      with:
-        playbook: crawler.yml
-        directory: ansible/
+      run: ansible-playbook ansible/crawler.yaml
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
