--- a/.github/workflows/test_event.yml
+++ b/.github/workflows/test_event.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run playbook
-      run: ansible-playbook ansible/crawler.yaml
+      run: ansible-playbook ansible/crawler.yml
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
