--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -5,9 +5,9 @@
   tasks:
 
   - name: Run script to crawl the website
-    raw: wget -m -o logfile.txt -p -P /data/ https://adappt.co.uk/ -vvv
+    ansible.builtin.shell: wget -m -o logfile.txt -p -P /data/ https://adappt.co.uk/ -vvv
     args:
-      executable: /usr/bin/bash
+      warn: no
 
   - name: zip the saved folder
     archive:
