--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -4,7 +4,7 @@
   tasks:
 
   - name: Run script to crawl the website
-    ansible.builtin.shell: wget --mirror -p -P /data https://adappt.co.uk/
+    ansible.builtin.shell: wget --mirror -x -N -p -P /data https://adappt.co.uk/
     args:
       warn: no
 
