--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -4,9 +4,9 @@
   tasks:
 
   - name: Run script to crawl the website
-    ansible.builtin.shell: wget -o logfile.txt -d --mirror --convert-links -p -P /data -x https://adappt.co.uk/
+    ansible.builtin.shell: wget --mirror -o logfile.txt -d -p -P /data -x https://adappt.co.uk/
     args:
-      warn: no
+      warn: false
 
   - name: zip the saved folder
     archive:
