--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -6,7 +6,7 @@
   - name: Run script to crawl the website
     ansible.builtin.shell: wget -o logfile.txt -p -P /data https://adappt.co.uk/
     args:
-      warn: false
+      warn: no
 
   - name: zip the saved folder
     archive:
