--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -4,13 +4,13 @@
   tasks:
 
   - name: Run script to crawl the website
-    ansible.builtin.shell: wget -o logfile.txt -p -P /data https://adappt.co.uk/
+    ansible.builtin.shell: wget --mirror -o logfile.txt -p -P . https://adappt.co.uk/
     args:
       warn: no
 
   - name: zip the saved folder
     archive:
       path:
-        - /data/ansible.co.uk
-      dest: /data/adappt_co_uk.zip
+        - /ansible/ansible.co.uk
+      dest: /ansible/adappt_co_uk.zip
       format: zip
