--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  Crawl website:
+  crawl-website:
     name: Crawl the web site
     runs-on: ubuntu-latest
 
@@ -21,7 +21,7 @@ jobs:
       with:
         args: -O logfile.txt -P ./ansible/ https://adappt.co.uk
   
-  zip files:
+  zip-files:
     
     name: Zips the Saved file
     runs-on: ubuntu-latest
@@ -35,7 +35,7 @@ jobs:
       with:
         args: zip -qq -r adappt_co_uk.zip . -i /ansible/adappt.co.uk
 
-  Upload:
+  upload:
     name: Upload files to s3
     runs-on: ubuntu-latest
 
