--- a/ansible/crawler.yml
+++ b/ansible/crawler.yml
@@ -4,7 +4,7 @@
   tasks:
 
   - name: Run script to crawl the website
-    shell: wget --mirror -o logfile.txt -p https://adappt.co.uk/
+    shell: wget --mirror -o logfile.txt -p -P . https://adappt.co.uk/
     args:
       warn: false
 
