--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,21 +16,18 @@ jobs:
       uses: actions/checkout@v1
       
     - name: wget the website
-      run: wget --mirror -o ansible/logfile.txt -p -P ansible/ https://adappt.co.uk
+      run: wget --mirror -p -P ansible/ https://adappt.co.uk
   
-  zip-files:
+  # zip-files:
   
-    name: Zips the Saved file
-    runs-on: ubuntu-latest
+  #   name: Zips the Saved file
+  #   runs-on: ubuntu-latest
 
-    steps:
-    # - name: Checkout Code
-    #   uses: actions/checkout@v1
-
-    - name: Prepares a zip file
-      uses: montudor/action-zip@v1.0.0
-      with:
-        args: zip -qq -r adappt_co_uk.zip . -i ansible/adappt.co.uk
+  #   steps:
+  #   - name: Prepares a zip file
+  #     uses: montudor/action-zip@v1.0.0
+  #     with:
+  #       args: zip -qq -r adappt_co_uk.zip . -i ansible/adappt.co.uk
 
   upload:
   
@@ -38,9 +35,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # - name: Checkout Code
-    #   uses: actions/checkout@v1
-
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -51,4 +45,4 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
-        aws s3 sync ansible/data/adappt_co_uk.zip s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        aws s3 sync ansible/adappt.co.uk s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
