--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v1
     
     - name: wget the website
-      run: wget --mirror --convert-links --adjust-extension --page-requisites --no-parent -P ansible/ https://adappt.co.uk
+      run: httrack --footer "" https://adappt.co.uk/
 
   upload:
   
