--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,10 @@ jobs:
       uses: actions/checkout@v1
     
     - name: wget the website
-      run: httrack --footer "" https://adappt.co.uk/
+      run: wget -m --convert-links --adjust-extension --page-requisites --no-parent -P ansible/ https://adappt.co.uk
+
+    - name: Checkout
+      uses: actions/checkout@v1
 
   upload:
   
@@ -24,6 +27,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -35,3 +41,6 @@ jobs:
       run: |
         aws s3 mb s3://${{ secrets.AWS_S3BUCKET_NAME }}
         aws s3 sync ansible/adappt.co.uk s3://${{ secrets.AWS_S3BUCKET_NAME }} --delete
+        
+    - name: Checkout
+      uses: actions/checkout@v1
