--- a/.github/actions/ansible/action.yml
+++ b/.github/actions/ansible/action.yml
@@ -4,7 +4,7 @@ inputs:
   playbook:
     description: 'Ansible playbook to run'
     required: true
-    default: playbook.yml
+    default: crawler.yml
   inventory:
     description: 'Ansible inventory to use'
     required: true
