--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -22,9 +22,6 @@ ENV ANSIBLE_RETRY_FILES_ENABLED false
 
 COPY ./entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT ["bash","/entrypoint.sh"]
+#ENTRYPOINT ["bash","/entrypoint.sh"]
 
-#ENTRYPOINT ["ansible-playbook","playbook.yml"]
-
-HEALTHCHECK --interval=5m --timeout=3s \
-  CMD curl -f http://localhost/ || exit 1
+ENTRYPOINT ["ansible-playbook","crawler.yml"]
