--- a/.github/workflows/github_connect.yml
+++ b/.github/workflows/github_connect.yml
@@ -35,7 +35,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ansible-container:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ansible-container
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
