--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -1,5 +1,9 @@
 FROM  ankitjaadoo/ansible-container:latest
 
+ENV ANSIBLE_HOST_KEY_CHECKING false
+ENV ANSIBLE_GATHERING smart
+ENV ANSIBLE_RETRY_FILES_ENABLED false
+
 COPY ./entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["bash","/entrypoint.sh"]
