docker build job added

--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -1,4 +1,4 @@
-name: deploy ansible
+name: build docker and deploy ansible
 
 on:
   push:
@@ -18,6 +18,25 @@ jobs:
       uses: ansible/ansible-lint-action@master
       with:
         targets: ""
+
+    - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and push
+          id: docker_build
+          uses: docker/build-push-action@v2
+          with:
+            context: ./
+            file: ./.github/actions/ansible/Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ansible-container:latest
   deployAnsible:
     needs: build
     runs-on: ubuntu-latest
