--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -14,29 +14,31 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v2
+      
     - name: Lint Ansible Playbook
       uses: ansible/ansible-lint-action@master
       with:
         targets: ""
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    
     - name: Set up Docker Buildx
-      id: buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: ./
-        file: ./.github/actions/ansible/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ansible-container
+        tags: ankitjaadoo/ansible-container:latest
+
   deployAnsible:
     needs: build
     runs-on: ubuntu-latest
