--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v2
-      
+
     - name: Lint Ansible Playbook
       uses: ansible/ansible-lint-action@master
       with:
@@ -29,8 +29,8 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     
     - name: Build and push
       id: docker_build
