--- a/.github/actions/ansible/action.yml
+++ b/.github/actions/ansible/action.yml
@@ -11,7 +11,7 @@ inputs:
     default: localhost
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: Dockerfile
   args:
     - ${{ inputs.playbook }}
     - ${{ inputs.inventory }}
