--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -31,9 +31,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    
+
     - name: Build and push
       id: docker_build
+      run: docker build -t local < ./.github/actions/ansible/Dockerfile
       uses: docker/build-push-action@v2
       with:
         push: true
