--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -32,9 +32,11 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+    - name: Build docker images
+      run: docker build -t local < ./.github/actions/ansible/devcontainer/Dockerfile
+
     - name: Build and push
       id: docker_build
-      run: docker build -t local < ./.github/actions/ansible/Dockerfile
       uses: docker/build-push-action@v2
       with:
         push: true
