--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Lint Ansible Playbook
       uses: ansible/ansible-lint-action@master
       with:
-        targets: ""
+        targets: ./crawler.yml
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
