--- a/.github/workflows/crawl_and_deploy.yml
+++ b/.github/workflows/crawl_and_deploy.yml
@@ -30,5 +30,5 @@ jobs:
           aws configure set aws_access_key_id $aws_key_id
           aws configure set aws_secret_access_key $aws_secret_access_key 
           aws configure set aws_region $aws_region
-          aws s3 mb s3://${{ $aws_s3_bucket }}
-          aws s3 sync ./adappt.co.uk s3://${{ $aws_s3_bucket }} --delete
+          aws s3 mb s3://$aws_s3_bucket
+          aws s3 sync ./adappt.co.uk s3://$aws_s3_bucket --delete
