changes to actions/ansible

--- a/.github/actions/ansible/action.yml
+++ b/.github/actions/ansible/action.yml
@@ -1,17 +1,5 @@
 name: 'Ansible'
-description: 'Runs an Ansible playbook'
-inputs:
-  playbook:
-    description: 'Ansible playbook to run'
-    required: true
-    default: crawler.yml
-  inventory:
-    description: 'Ansible inventory to use'
-    required: true
-    default: localhost
+description: 'Runs an Ansible playbook' 
 runs:
   using: 'docker'
-  image: ././Dockerfile
-  args:
-    - ${{ inputs.playbook }}
-    - ${{ inputs.inventory }}
+  image: 'Dockerfile'
