--- a/.github/workflows/crawl_and_deploy.yml
+++ b/.github/workflows/crawl_and_deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: crawl the website
         shell: bash
-        run: wget -m -o logfile.txt -p -P ./ https://adappt.co.uk/
+        run: wget -m -p -P ./ https://adappt.co.uk/
 
       - name: Copy file to S3
         shell: bash
