install mode fixed for python image

--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -1,9 +1,7 @@
 FROM python 
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
-
-RUN apk add ansible gcc python3-dev libc-dev libffi-dev openssl-dev 
-RUN pip install --upgrade paramiko
+RUN pip install --upgrade paramiko ansible gcc python3-dev libc-dev libffi-dev openssl-dev
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
