py3-pip added to apk add

--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -1,7 +1,9 @@
-FROM python 
+FROM alpine 
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
-RUN pip install --upgrade paramiko ansible gcc python3-dev libc-dev libffi-dev openssl-dev
+
+RUN apk add ansible gcc python3-dev libc-dev libffi-dev openssl-dev py3-pip
+RUN pip3 install --upgrade paramiko
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
